Open-MX 1.3.1 (August .... 2010, svn r....)
===========================================

Bug fixes:
* Fix in-order matching when many unexpected messages arrive out-of-order.
* Fix omx_init when running from /etc/init.d on some distributions.
* Clarify the management of connection nacks so that multiple connect
  requests to the same invalid peer fail properly.

Other improvements from previous release:
* Remove the old omx_check.sh script and document the new omx_check
  infrastructure.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 1.3.0 (July 12th 2010, svn r3078)
=========================================

Bug fixes:
* Properly build non-debug libraries with -O2.

Other improvements from previous release:
* Install more internal MX API compatibility headers so that OpenMPI
  enables MX internal symbols when configured on top of Open-MX. 
* Miscellaneous minor fixes.

Open-MX 1.2.903 aka 1.3-rc3 (June 24th 2010, svn r3060)
=======================================================

Bug fixes:
* Further fix the management of skb destructors by using shared info
  destructor data in recent kernels and reverting to the old code
  in earlier kernels.

Other improvements from previous release:
* Add a new test infrastructure in parallel of the old omx_check.sh
  script.
* Miscellaneous minor fixes all over the place.

Open-MX 1.2.902 aka 1.3-rc2 (June 9th 2010, svn r3022)
======================================================
The skb->cb release.

Bug fixes:
* Fix the management of skb destructors to be compatible with 2.6.33
  Linux kernel and later.

Other improvements from previous release:
* Make omx_check.sh work from the build directory before make install.
* Fix Valgrind requirements during configure.
* Some minor fixes to the build system.
* Clarify thread-safety in the FAQ.

Open-MX 1.2.901 aka 1.3-rc1 (May 20th 2010, svn r2984)