@@ -1,5 +1,6 @@
 Open-MX 1.3.1 (August .... 2010, svn r....)
 ===========================================
+The out-of-order unexpected release.
 
 Bug fixes:
 * Fix in-order matching when many unexpected messages arrive out-of-order.
@@ -9,7 +10,7 @@ Bug fixes:
 
 Other improvements from previous release:
 * Remove the old omx_check.sh script and document the new omx_check
-  infrastructure.
+  testing infrastructure.
 
 Caveats:
 * No background progression or retransmission is done if the application
